feat: post, post-list, post-list-item and comment-list added

--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,9 @@
             "scripts": []
           },
           "configurations": {
+            "github-pages": {
+              "baseHref": "/forum-io/"
+            },
             "production": {
               "budgets": [
                 {
@@ -91,6 +94,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
