--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@angular-devkit/build-angular": "^16.2.7",
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.5",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.16",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -36,6 +39,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.31",
+    "semantic-release": "^22.0.12",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
   }
